feat: ML-AR model, improved inference, RQ1 evaluation pipeline
- Add autoregressive transformer model (train_autoregressive_model.py)
  with dedup, adaptive temperature, compound-pattern permutation expansion,
  and NON->GLOBAL supervision during training
- Add --inference-only flag to skip retraining and reuse checkpoints
- Add generate_rq1_table.py producing table*/\#chunks/median formatted LaTeX
- Add plot_hamming_progress.py with ML-AR curve and hatched IQR bands
- Add PatternMatchEvaluator, ConflictFileSaver, cross-validation fold data
- Add per-fold learnt heuristic distributions and evaluation CSVs
- Update .gitignore for large data files and generated artifacts
- Remove ExcelWriter (replaced by CSV pipeline), remove trained_on_merge_ids.csv
- Update BuildFailureClassifier, MergeFilter, PatternHeuristics, AppConfig

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>